--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="#restaurant-jobs">Restaurant Jobs</a></li>
                 <li><a href="#corporate-careers">Corporate</a></li>
                 <li><a href="#student-opportunities">Students</a></li>
+                <li><a href="#crypto-jobs">Crypto Bros</a></li>
                 <li><a href="https://twitter.com" target="_blank" class="nav-btn x-btn">X</a></li>
                 <li><a href="https://dexscreener.com" target="_blank" class="nav-btn dex-btn">Dexscreener</a></li>
                 <li class="ca-box">CA: <span id="ca-text">0000000000000000000000</span> <button class="copy-btn"
@@ -245,7 +246,7 @@
         <h2 class="section-title">Student Opportunities</h2>
         <div class="job-grid">
             <div class="job-card">
-                <div class="job-title">Summer Internship 2024</div>
+                <div class="job-title">Summer Internship 2026</div>
                 <div class="job-location">📍 Multiple Locations</div>
                 <p>Jumpstart your career with hands-on experience in operations or corporate.</p>
                 <a href="prank.html" class="apply-btn">Apply Now</a>
@@ -313,6 +314,72 @@
         </div>
     </section>
 
+    <section class="jobs-section" id="crypto-jobs">
+        <h2 class="section-title">Crypto & Web3 Opportunities</h2>
+        <div class="job-grid">
+            <div class="job-card">
+                <div class="job-title">Blockchain Developer</div>
+                <div class="job-location">📍 Remote</div>
+                <p>Build decentralized applications and scalable chain infrastructure.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+            <div class="job-card">
+                <div class="job-title">Quantitative Trader</div>
+                <div class="job-location">📍 New York, NY / Remote</div>
+                <p>Develop algorithmic strategies for high-frequency crypto trading.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+            <div class="job-card">
+                <div class="job-title">Solidity Engineer</div>
+                <div class="job-location">📍 Remote</div>
+                <p>Write and optimize smart contracts for DeFi protocols.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+            <div class="job-card">
+                <div class="job-title">DeFi Analyst</div>
+                <div class="job-location">📍 Remote</div>
+                <p>Analyze market trends, yield strategies, and protocol risks.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+            <div class="job-card">
+                <div class="job-title">Smart Contract Auditor</div>
+                <div class="job-location">📍 Remote</div>
+                <p>Review code logic to ensure security and prevent exploits.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+            <div class="job-card">
+                <div class="job-title">Web3 Product Manager</div>
+                <div class="job-location">📍 San Francisco, CA</div>
+                <p>Lead the roadmap for next-gen decentralized products.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+            <div class="job-card">
+                <div class="job-title">Tokenomics Expert</div>
+                <div class="job-location">📍 Remote</div>
+                <p>Design sustainable token economies and incentive structures.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+            <div class="job-card">
+                <div class="job-title">Rust Developer</div>
+                <div class="job-location">📍 Berlin, DE / Remote</div>
+                <p>Build high-performance applications for Solana or Polkadot.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+            <div class="job-card">
+                <div class="job-title">Community Manager</div>
+                <div class="job-location">📍 Remote</div>
+                <p>Engage with the community on Discord, X, and Telegram.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+            <div class="job-card">
+                <div class="job-title">NFT Strategist</div>
+                <div class="job-location">📍 Los Angeles, CA</div>
+                <p>Create and execute strategies for digital asset collections.</p>
+                <a href="prank.html" class="apply-btn">Apply Now</a>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="footer-links">
             <a href="#">Privacy (Updated)</a>
@@ -321,7 +388,7 @@
             <a href="#">Accessibility</a>
             <a href="#">California Privacy Notice</a>
         </div>
-        <p>&copy; 2024 McDonald's. All Rights Reserved.</p>
+        <p>&copy; 2026 McDonald's. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
