Update website: rename to work, rotate logo, update carousel images, replace crypto jobs with restaurant jobs

--- a/prank.html
+++ b/prank.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Application Status</title>
+    <title>Work - Application Status</title>
     <link rel="icon" href="McDonalds-Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -62,14 +62,13 @@
     <header>
         <div class="logo-container">
             <img src="McDonalds-Logo.png" alt="McDonald's Logo" class="mcd-logo-img">
-            <span>Careers</span>
+            <span>work</span>
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Restaurant Jobs</a></li>
+                <li><a href="index.html">Crypto Bros</a></li>
                 <li><a href="index.html">Corporate</a></li>
                 <li><a href="index.html">Students</a></li>
-                <li><a href="index.html">Crypto Bros</a></li>
             </ul>
         </nav>
     </header>
@@ -92,6 +91,8 @@
         </div>
         <p>&copy; 2024 McDonald's. All Rights Reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
