--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>McDonald's Careers - United States</title>
+    <title>Work - United States</title>
     <link rel="icon" href="McDonalds-Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,14 +13,13 @@
     <header>
         <div class="logo-container">
             <img src="McDonalds-Logo.png" alt="McDonald's Logo" class="mcd-logo-img">
-            <span>Careers</span>
+            <span>work</span>
         </div>
         <nav>
             <ul>
-                <li><a href="#restaurant-jobs">Restaurant Jobs</a></li>
+                <li><a href="#crypto-jobs">Crypto Bros</a></li>
                 <li><a href="#corporate-careers">Corporate</a></li>
                 <li><a href="#student-opportunities">Students</a></li>
-                <li><a href="#crypto-jobs">Crypto Bros</a></li>
                 <li><a href="https://twitter.com" target="_blank" class="nav-btn x-btn">X</a></li>
                 <li><a href="https://dexscreener.com" target="_blank" class="nav-btn dex-btn">Dexscreener</a></li>
                 <li class="ca-box">CA: <span id="ca-text">0000000000000000000000</span> <button class="copy-btn"
@@ -33,19 +32,17 @@
         <div class="carousel-container">
             <div class="carousel-track">
                 <!-- Set 1 -->
-                <img src="WhatsApp Image 2026-02-05 at 4.39.36 PM.jpeg" alt="Slide 1">
-                <img src="WhatsApp Image 2026-02-05 at 4.39.06 PM.jpeg" alt="Slide 2">
-                <img src="WhatsApp Image 2026-02-05 at 4.39.03 PM.jpeg" alt="Slide 3">
-                <img src="WhatsApp Image 2026-02-05 at 4.42.46 PM.jpeg" alt="Slide 4">
-                <img src="WhatsApp Image 2026-02-05 at 4.42.43 PM.jpeg" alt="Slide 5">
-                <img src="WhatsApp Image 2026-02-05 at 4.42.40 PM.jpeg" alt="Slide 6">
+                <img src="WhatsApp Image 2026-02-05 at 7.48.14 PM.jpeg" alt="Slide 1">
+                <img src="WhatsApp Image 2026-02-05 at 7.41.45 PM.jpeg" alt="Slide 2">
+                <img src="WhatsApp Image 2026-02-05 at 7.39.55 PM.jpeg" alt="Slide 3">
+                <img src="WhatsApp Image 2026-02-05 at 7.25.37 PM.jpeg" alt="Slide 4">
+                <img src="WhatsApp Image 2026-02-05 at 7.19.21 PM.jpeg" alt="Slide 5">
                 <!-- Set 2 (Duplicate) -->
-                <img src="WhatsApp Image 2026-02-05 at 4.39.36 PM.jpeg" alt="Slide 1">
-                <img src="WhatsApp Image 2026-02-05 at 4.39.06 PM.jpeg" alt="Slide 2">
-                <img src="WhatsApp Image 2026-02-05 at 4.39.03 PM.jpeg" alt="Slide 3">
-                <img src="WhatsApp Image 2026-02-05 at 4.42.46 PM.jpeg" alt="Slide 4">
-                <img src="WhatsApp Image 2026-02-05 at 4.42.43 PM.jpeg" alt="Slide 5">
-                <img src="WhatsApp Image 2026-02-05 at 4.42.40 PM.jpeg" alt="Slide 6">
+                <img src="WhatsApp Image 2026-02-05 at 7.48.14 PM.jpeg" alt="Slide 1">
+                <img src="WhatsApp Image 2026-02-05 at 7.41.45 PM.jpeg" alt="Slide 2">
+                <img src="WhatsApp Image 2026-02-05 at 7.39.55 PM.jpeg" alt="Slide 3">
+                <img src="WhatsApp Image 2026-02-05 at 7.25.37 PM.jpeg" alt="Slide 4">
+                <img src="WhatsApp Image 2026-02-05 at 7.19.21 PM.jpeg" alt="Slide 5">
             </div>
         </div>
         <div class="hero-content">
@@ -60,8 +57,8 @@
         </div>
     </section>
 
-    <section class="jobs-section" id="restaurant-jobs">
-        <h2 class="section-title">Restaurant Jobs</h2>
+    <section class="jobs-section" id="crypto-jobs">
+        <h2 class="section-title">Crypto Bros</h2>
         <div class="job-grid">
             <div class="job-card">
                 <div class="job-title">Crew Member</div>
@@ -319,72 +316,6 @@
                 <div class="job-title">Global Operations Intern</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Understand how we standardize excellence worldwide.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="jobs-section" id="crypto-jobs">
-        <h2 class="section-title">Crypto & Web3 Opportunities</h2>
-        <div class="job-grid">
-            <div class="job-card">
-                <div class="job-title">Blockchain Developer</div>
-                <div class="job-location">📍 Remote</div>
-                <p>Build decentralized applications and scalable chain infrastructure.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <div class="job-title">Quantitative Trader</div>
-                <div class="job-location">📍 New York, NY / Remote</div>
-                <p>Develop algorithmic strategies for high-frequency crypto trading.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <div class="job-title">Solidity Engineer</div>
-                <div class="job-location">📍 Remote</div>
-                <p>Write and optimize smart contracts for DeFi protocols.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <div class="job-title">DeFi Analyst</div>
-                <div class="job-location">📍 Remote</div>
-                <p>Analyze market trends, yield strategies, and protocol risks.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <div class="job-title">Smart Contract Auditor</div>
-                <div class="job-location">📍 Remote</div>
-                <p>Review code logic to ensure security and prevent exploits.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <div class="job-title">Web3 Product Manager</div>
-                <div class="job-location">📍 San Francisco, CA</div>
-                <p>Lead the roadmap for next-gen decentralized products.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <div class="job-title">Tokenomics Expert</div>
-                <div class="job-location">📍 Remote</div>
-                <p>Design sustainable token economies and incentive structures.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <div class="job-title">Rust Developer</div>
-                <div class="job-location">📍 Berlin, DE / Remote</div>
-                <p>Build high-performance applications for Solana or Polkadot.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <div class="job-title">Community Manager</div>
-                <div class="job-location">📍 Remote</div>
-                <p>Engage with the community on Discord, X, and Telegram.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <div class="job-title">NFT Strategist</div>
-                <div class="job-location">📍 Los Angeles, CA</div>
-                <p>Create and execute strategies for digital asset collections.</p>
                 <a href="prank.html" class="apply-btn">Apply Now</a>
             </div>
         </div>
