Change website name from McDonald's to work throughout the site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="McDonalds-Logo.png" alt="McDonald's Logo" class="mcd-logo-img">
+            <img src="McDonalds-Logo.png" alt="work Logo" class="mcd-logo-img">
             <span>work</span>
         </div>
         <nav>
@@ -329,7 +329,7 @@
             <a href="#">Accessibility</a>
             <a href="#">California Privacy Notice</a>
         </div>
-        <p>&copy; 2026 McDonald's. All Rights Reserved.</p>
+        <p>&copy; 2026 work. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
