--- a/prank.html
+++ b/prank.html
@@ -61,7 +61,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="McDonalds-Logo.png" alt="McDonald's Logo" class="mcd-logo-img">
+            <img src="McDonalds-Logo.png" alt="work Logo" class="mcd-logo-img">
             <span>work</span>
         </div>
         <nav>
@@ -89,7 +89,7 @@
             <a href="#">Terms & Conditions</a>
             <a href="#">Cookie Settings</a>
         </div>
-        <p>&copy; 2024 McDonald's. All Rights Reserved.</p>
+        <p>&copy; 2024 work. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
