Link all jobs to official McDonald's careers website

--- a/index.html
+++ b/index.html
@@ -64,91 +64,91 @@
                 <div class="job-title">Crew Member</div>
                 <div class="job-location">📍 Chicago, IL</div>
                 <p>Deliver the gold standard in quality, service, and cleanliness.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Shift Manager</div>
                 <div class="job-location">📍 Los Angeles, CA</div>
                 <p>Lead the team to success and ensure customer satisfaction.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Guest Experience Leader</div>
                 <div class="job-location">📍 New York, NY</div>
                 <p>Create feel-good moments for our guests.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Maintenance Person</div>
                 <div class="job-location">📍 Houston, TX</div>
                 <p>Keep things running smoothly behind the scenes.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Waiter / Server</div>
                 <div class="job-location">📍 Miami, FL</div>
                 <p>Provide excellent table service and creating a welcoming atmosphere.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Kitchen Staff</div>
                 <div class="job-location">📍 Seattle, WA</div>
                 <p>Prepare our world-famous food in a fast-paced environment.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">General Manager</div>
                 <div class="job-location">📍 Denver, CO</div>
                 <p>Oversee restaurant operations and mentor the team.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Department Manager</div>
                 <div class="job-location">📍 Phoenix, AZ</div>
                 <p>Lead a specific department to meet business goals.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Cashier</div>
                 <div class="job-location">📍 Boston, MA</div>
                 <p>Smile, greet guests, and handle transactions accurately.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">McCafé Barista</div>
                 <div class="job-location">📍 Portland, OR</div>
                 <p>Craft delicious coffee beverages with passion.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Overnight Crew</div>
                 <div class="job-location">📍 Las Vegas, NV</div>
                 <p>Keep the restaurant running while the city sleeps.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Area Supervisor</div>
                 <div class="job-location">📍 Dallas, TX</div>
                 <p>Oversee operations for multiple restaurant locations.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Delivery Driver</div>
                 <div class="job-location">📍 San Francisco, CA</div>
                 <p>Ensure our food reaches customers hot and fresh.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Crew Trainer</div>
                 <div class="job-location">📍 Philadelphia, PA</div>
                 <p>Train the next generation of crew members.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Breakfast Crew</div>
                 <div class="job-location">📍 Austin, TX</div>
                 <p>Start the day right by serving our famous breakfast.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
         </div>
     </section>
@@ -160,91 +160,91 @@
                 <div class="job-title">Marketing Specialist</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Shape the voice of our brand and drive global campaigns.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Human Resources Director</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Lead people strategies and foster our inclusive culture.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Data Analyst</div>
                 <div class="job-location">📍 Remote / Chicago</div>
                 <p>Use data to drive business decisions and innovation.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Software Engineer</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Build the digital platforms that power our global operations.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Supply Chain Manager</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Ensure the highest quality ingredients reach our restaurants.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Legal Counsel</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Provide legal guidance to protect our brand and business.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Global Finance Manager</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Oversee financial planning and reporting for global markets.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Sustainability Strategist</div>
                 <div class="job-location">📍 Remote</div>
                 <p>Drive our initiatives for a greener, more sustainable future.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Communications Officer</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Manage internal and external communications strategies.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Real Estate Manager</div>
                 <div class="job-location">📍 Nashville, TN</div>
                 <p>Identify prime locations for new restaurant development.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">IT Support Specialist</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Provide technical assistance to our corporate employees.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Franchise Business Partner</div>
                 <div class="job-location">📍 Orlando, FL</div>
                 <p>Support franchisees in maximizing their potential.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Field Service Manager</div>
                 <div class="job-location">📍 Columbus, OH</div>
                 <p>Ensure operational excellence across a region.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Product Manager (Digital)</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Lead the development of new digital customer experiences.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Quality Assurance Lead</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Maintain the highest standards of food safety and quality.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
         </div>
     </section>
@@ -256,67 +256,67 @@
                 <div class="job-title">Summer Internship 2026</div>
                 <div class="job-location">📍 Multiple Locations</div>
                 <p>Jumpstart your career with hands-on experience in operations or corporate.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Archways to Opportunity™</div>
                 <div class="job-location">📍 Nationwide</div>
                 <p>Tuition assistance and education programs for employees.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Hamburger University Trainee</div>
                 <div class="job-location">📍 Oak Brook, IL</div>
                 <p>Learn management skills at our world-renowned training facility.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Marketing Intern</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Assist with upcoming campaigns and brand initiatives.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Finance Intern</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Gain exposure to corporate financial planning and analysis.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">IT Intern</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Work on real-world technology projects and software development.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Supply Chain Intern</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Learn the complexities of our global supply chain network.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Human Resources Intern</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Support talent acquisition and employee engagement efforts.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Culinary Intern</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Assist our chefs in the Innovation Center test kitchen.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Legal Intern</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Research legal matters and support the corporate legal team.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
             <div class="job-card">
                 <div class="job-title">Global Operations Intern</div>
                 <div class="job-location">📍 Chicago, IL (HQ)</div>
                 <p>Understand how we standardize excellence worldwide.</p>
-                <a href="prank.html" class="apply-btn">Apply Now</a>
+                <a href="https://www.mcdonalds.com/us/en-us/careers.html" target="_blank" class="apply-btn">Apply Now</a>
             </div>
         </div>
     </section>
